<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="ou">ou</string>
    <string name="krittz">KrittZ</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="bem_vindo_a">Bem-Vindo(a),</string>
    <string name="ltima_m_dia">Última média</string>
    <string name="abastecimento">Abastecimento</string>
    <string name="pre_o_por_litro">Preço por litro:</string>
    <string name="quil_metros">Kms atuais:</string>
    <string name="litros">Litros:</string>
</resources>