<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".SupplyActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:drawableStart="@drawable/gas_station"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing=".05"
            android:text="@string/abastecimento"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputLitros"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field"
            android:drawableStart="@drawable/twotone_water_drop_24"
            android:drawablePadding="5dp"
            android:hint="@string/litros"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputKmAtual"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field"
            android:drawableStart="@drawable/twotone_speed_24"
            android:drawablePadding="5dp"
            android:hint="@string/quil_metros"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputPrecoLitro"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_field"
            android:drawableStart="@drawable/twotone_monetization_on_24"
            android:drawablePadding="5dp"
            android:hint="@string/pre_o_por_litro"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSalvarAbastecimento"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing=".09"
            android:shadowColor="@color/black"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="Salvar"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing=".05"
            android:shadowColor="@color/black"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="Cancelar"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>