<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/code"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing=".1"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="3"
            android:text="@string/krittz"
            android:textColor="@color/white"
            android:textSize="44sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/bem_vindo_a"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nomeUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/pink"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/darkDetail"
            android:clickable="false"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ltima_m_dia"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/gas_station"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_black"
                android:shadowColor="@color/black"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="16.2 Km/l"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />


        </androidx.cardview.widget.CardView>


        <com.github.mikephil.charting.charts.LineChart
            android:layout_margin="30dp"
            android:id="@+id/chart"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:background="@color/darkDetail" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAbastecer"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing=".1"
            android:shadowColor="@color/black"
            android:shadowDy="8"
            android:shadowRadius="10"
            android:text="Abastecer"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
